# turkificate

./: LICENSE  README.md  __init__.py  base.py  data.py  normalizers.py  numbers.py  pipeline.py  pyproject.toml  test_turkificate.py
.github/workflows/: publish.yml
